force-app/main/default/objects/CTRPurchasingView__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR Purchasing View</relationshipLabel>
        <relationshipName>CTR_Purchasing_View</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctgClerk__c</fullName>
        <label>Acctg Clerk.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AccigClerk</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomaticPurchaseOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic purchase order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlockStatus__c</fullName>
        <label>Block Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRUE</fullName>
                </value>
                <value>
                    <fullName>FALSE</fullName>
                    <default>true</default>
                    <label>FALSE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chkdoubleinv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chk double inv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRBasedInvVerif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GR-Based Inv.Verif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupKey__c</fullName>
        <label>Group Key (Account Key of Bank)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <label>Incoterms2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incoterm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Key for Integration</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastPurDocDay__c</fullName>
        <formula>TODAY() - PurchasingDocDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Purchasing Doc Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestBlockingDate__c</fullName>
        <label>Latest Blocking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestReEvaluationDate__c</fullName>
        <label>Latest Re-Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextReEvaluationDate__c</fullName>
        <label>Next Re-Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumDays__c</fullName>
        <formula>IF(
        ISBLANK(PurchasingDocDate__c),
        0,
        TODAY() - PurchasingDocDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchasingDocDate__c</fullName>
        <description>Invoice Supplier</description>
        <label>Purchasing Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchasingDocType__c</fullName>
        <label>Purchasing Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZH1M</fullName>
                    <label>ZH1M TSV Standard PO</label>
                </value>
                <value>
                    <fullName>ZA0M</fullName>
                    <label>ZA0M TX Standard PO</label>
                </value>
                <value>
                    <fullName>ZSSC</fullName>
                    <label>ZSSC PO Shipment Cost</label>
                </value>
                <value>
                    <fullName>ZA0P</fullName>
                    <label>ZA0P PR from MRP (TX)/TX PO from MRP</label>
                </value>
                <value>
                    <fullName>ZH1S</fullName>
                    <label>ZH1S TSV Sale Order PO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchasingDoc__c</fullName>
        <description>Invoice Supplier</description>
        <label>Purchasing Doc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchasingOrg__c</fullName>
        <label>Purchasing Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1100</fullName>
                    <label>SS: Hydrocarbon</label>
                </value>
                <value>
                    <fullName>A000</fullName>
                    <label>TX: Purch. Org.</label>
                </value>
                <value>
                    <fullName>H100</fullName>
                    <label>TSV: Purch. Org.</label>
                </value>
                <value>
                    <fullName>0001</fullName>
                    <isActive>false</isActive>
                    <label>0001</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <isActive>false</isActive>
                    <label>SS: non-Hydrocarbon</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchasingOrganizationTOP__c</fullName>
        <label>Purchasing Organization (TOP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PurchasingOrganizationTOP</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchasingOrganizationTX__c</fullName>
        <label>Purchasing Organization (TX)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PurchasingOrganizationTX</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchasingOrganization__c</fullName>
        <label>Purchasing Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PurchasingOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingCond__c</fullName>
        <label>Shipping Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingConditions__c</fullName>
        <label>Shipping Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingConditions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Deletion Indicator</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermofPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TermofPayment</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Purchasing View</relationshipLabel>
        <relationshipName>CTR_Purchasing_View</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VATRegno__c</fullName>
        <label>VAT Reg no.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CTR Purchasing View</label>
    <nameField>
        <label>CTR Pur Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>